--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -21,6 +21,10 @@
                              description={Un drapeau, dans la dénomination logstash, le flag représente une option passé en argument exemple : -w.
 }}
 
+\newglossaryentry{Munin}{name={Munin},
+                             description={Munin est un logiciel de monitoring populaire et simple d'installation
+}}
+
 \newglossaryentry{index}{name={index},
                              description={Un index dans la terminologie est ce qui se rapproche d'une base dans le modèle relationnel \emph{classique}. 
 }}
