--- a/rapport/kibana.tex
+++ b/rapport/kibana.tex
@@ -4,17 +4,15 @@
 \label{fig:kibana.png}
 \end{figure}
 \section{Qu'est ce que Kibana}
-Kibana est à la fois un front-end à Elasticsearch mais également un outil de présentation
-de données puissant. Kibana permet aussi dans une certaine mesure de faire du monitoring.
-(avec de grosses guillemets quand même)
-
-Il est principalement codé en angularJS.
+Kibana est à la fois un front-end à Elasticsearch permettant de présenter les données. 
 
 C'est l'outil de visualisation officiel d'Elasticsearch, il est assez ergonomique 
 et donc plutôt facile d'utilisation. Sa barre de recherche utilise la syntaxe 
-search Lite présenté plus dans le chapitre traitant d'Elasticsearch.
-Son utilisation pour réaliser des tableaux, dashboard et autre camemberts est assez
-aisé une fois les principes de bases assimilés.
+search Lite présenté plus haut dans le chapitre traitant d'Elasticsearch\footnote{voir p\pageref{subsec:elasticsearchlite}}.
+Son utilisation pour réaliser des tableaux, dashboard (tableaux de bord) et autre 
+camemberts est assez aisé une fois les principes de bases assimilés.
+
+
 
 \section{Installation de Kibana}
 L'installation de Kibana est relativement simple, il suffit de télécharger l'application
@@ -75,8 +73,8 @@ depuis son navigateur.
 \end{figure}
 Pour effectuer une recherche, on doit choisir dans quels index, si il est possible 
 de réaliser une recherche dans plusieurs index à la fois, il faut dans Kibana que 
-ce soit des indexs disposant du même mapping. Typiquement rangés par \ipath{nom-*}.
-Pour choisir son index il faut \emph{sélectionner la roue denté à droite de la barre
+ce soit des index disposant du même mapping. Typiquement rangés par \ipath{nom-*}.
+Pour choisir son index il faut \emph{sélectionner la roue dentée à droite de la barre
 de recherche}.
 
 
@@ -92,20 +90,13 @@ Il est tout d'abord possible de de choisir les possibilités du menu rapide, aff
 dans l'image ci-dessus. Le choix est déjà assez exhaustif, mais il est également 
 possible de se positionner relativement par rapport à maintenant. Par exemple rechercher 
 parmi les 30 dernières secondes, ou bien les deux derniers mois (de la seconde à 
-l'année). Il est également possible de choisir un intervalle de temps absolue, à 
+l'année). Il est également possible de choisir un intervalle de temps absolu, à 
 la seconde près.
 
 Enfin il est possible de rafraichir ces données en choisissant un intervalle allant
 de 5 secondes à une journée (également désactivable).
-\newpage
-%\begin{wrapfigure}{l}{0.42\textwidth}
-\begin{figure}[H]
-\center
-\includegraphics[width=0.4\textwidth,height=0.8\textheight]{kibanatuto/rap/4.png}
-\label{fig:kibanatuto4}
-\caption{Le tableau des champs}
-\end{figure}
-%\end{wrapfigure}
+
+Voir tableau des champs p\pageref{fig:kibanatuto4}
 
 Le tableau des champs disponibles dans l'index est très pratique pour rendre plus 
 lisible les informations que l'on recherche ainsi que pour obtenir des statistiques 
@@ -137,15 +128,11 @@ add à droite} de chaque champ) et bien sure de combiner les deux dernières "te
 \end{figure}
 
 \subsection{Visualization}
-Nous allons maintenant parler de la visualisation des données, il s'agit la encore
+Nous allons maintenant parler de la visualisation (en francais) des données, il s'agit là encore
 que de donner un très bref aperçu des possibilités.
 
-\begin{figure}[H]
-\center
-\includegraphics[width=1\textwidth]{kibanatuto/rap/10.png}
-\label{fig:kibanatuto7}
-\caption{Visualisations possibles}
-\end{figure}
+Voir la page de garde des visualisations p\pageref{fig:kibanatuto7}
+
 Voilà les différents types de visualisations parmi lesquelles nous pouvons faire 
 notre choix. Toute ne conviennent pas, le meilleur choix est affaire d'expérience.
 
@@ -157,7 +144,7 @@ notre choix. Toute ne conviennent pas, le meilleur choix est affaire d'expérien
 \caption{Camembert de répartition des logs sur la dernière semaine}
 \end{figure}
 Voici un camembert très simple, réalisable en moins d'une minute. Il agrège les logs
-sur une semaine en les classants par date d'émission, groupés par jour. 
+sur une semaine en les classant par date d'émission, groupés par jour. 
 Il est évidémment possible de faire des choses plus compliquées avec plus ou moins
 données/de traitement.
 
@@ -193,11 +180,11 @@ que l'on souhaite voir affiché.
 \end{figure}
 
 Comme expliqué plus haut les visualisations ainsi que les tableaux sont interactifs.
-Il est par exemple possible de façon assez intuitive faire une recherche limité ségréguée.
+Il est par exemple possible de façon assez intuitive faire une recherche limitée ségréguée.
 Ici il suffit de cliquer sur le quartier désiré de la visualisation. Cela aura pour 
 effet de faire apparaitre la barre verte (contextuelle) et de ne faire apparaitre 
 dans le tableau de résultat à droite que les logs correspondants. Ici les logs ayant
-pour ip source affiché su \hyperref[fig:kibanatuto11]{l'image}.
+pour ip source 147.99.x.x affiché sur l'image ci-dessous.
 
 \begin{figure}[H]
 \center
@@ -206,53 +193,9 @@ pour ip source affiché su \hyperref[fig:kibanatuto11]{l'image}.
 \caption{Dashboard simple}
 \end{figure}
 
-Il est également possible de facilement partager ces dashboard, via des liens avec 
-iframes permettant de les inclure dans une page de monitoring par exemple.
+Il est possible de partager facilement ces dashboard, via des liens avec 
+iframes. On peut ainsi facilement les ajouter dans une page de monitoring par exemple.\\[3mm]
 
-\begin{figure}[H]
-\center
-\includegraphics[width=1\textwidth]{kibanatuto/rap/19.png}
-\label{fig:kibanatuto12}
-\caption{Dashboard plus avancé}
-\end{figure}
-
-\subsection{Settings}
-Si un doute s'était imissé dans notre esprit, les paramètres de Kibana, concernent
-uniquement Kibana, et pas Elasticsearch,\hyperref[fig:kibanatuto14]{ certaines informations} 
-sont cependant affichées pour aider l'utilisation de Kibana mais pas de possibilité 
-de les modifiées.
-
-En revanche, il faut bien avouer que leurs consultation est plus agréable depuis 
-Kibana que depuis l'export json d'Elasticsearch.
-
-\begin{figure}[H]
-\center
-\includegraphics[width=1\textwidth]{kibanatuto/rap/20.png}
-\label{fig:kibanatuto13}
-\caption{Accueil de settings}
-\end{figure}
-
-Dans cette page vous pouvez créer de nouveaux ensembles d'index, ou en choisir un 
-déjà existant.
-
-En choisissant un index nous obtenons des informations sur son mapping, ce qui peut 
-être utile pour effectué des recherches plus pertinenentes.
-
-
-\begin{figure}[H]
-\center
-\includegraphics[width=1\textwidth]{kibanatuto/rap/22.png}
-\label{fig:kibanatuto14}
-\caption{Mapping d'un index}
-\end{figure}
-
-Enfin, c'est aussi dans cette section que l'on a une liste et que l'on peut supprimer les 
-objets enregistrés (recherche, visualisations, dashboard)
-
-\begin{figure}[H]
-\center
-\includegraphics[width=1\textwidth]{kibanatuto/rap/23.png}
-\label{fig:kibanatuto15}
-\caption{Liste des objets}
-\end{figure}
+Voir l'image d'un Dashboard plus avancé p\pageref{fig:kibanatuto12}\\[2mm]
+Partie non essentielle sur les \emph{settings} p\pageref{subsec:settings}
 
