--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -40,20 +40,10 @@
 \url{http://www.logstashbook.com/}\\[1mm]
 
 \textbf{Elasticsearch: The Definitive Guide}\\
-\url{http://shop.oreilly.com/product/0636920028505.do}\\[1mm]
-
-\textbf{Rapport projet tutoré ASRALL sur les MOM}\\
-\url{http://webloria.loria.fr/~lnussbau/ptasrall2015/rapport\_a\_mom.pdf}\\[3mm]
-
+\url{https ://github.com/elastic/elasticsearch-definitive-guide}\\[1mm]
 
 {\huge Vidéos}\\[5mm]
 
 \textbf{Conférence de Jean Baptiste Favre, architecte réseau blablacar, PSES 2014}\\
 \url{http://numaparis.ubicast.tv/videos/kibana/}\\[3mm]
 
-
-
-
-
-Vocabulaire de logstash
-https://github.com/elastic/logstash/blob/f97c01da0631566e0ec07c9a076286e22a8f43a9/docs/asciidoc/static/logstash-glossary.asciidoc
